# DiarioDataRustPruebas

./: Cargo.toml  Trunk.toml  index.html  styles.css
src/: app.rs  main.rs  router.rs  routes.rs
src/components/: mod.rs
src/components/inputs/: checkbox_field.rs  mod.rs  select_field.rs  text_field.rs  textarea_field.rs
src/components/layout/: layout.rs  mod.rs  sidebar.rs  topbar.rs
src/components/persona/: identificacion  mod.rs
src/components/persona_form/: contacto_section.rs  datos_fiscales_section.rs  datos_personales_section.rs  identificacion_section.rs  mod.rs  otros_datos_section.rs  persona_form_component.rs
src/pages/: mod.rs  persona_form_page.rs
src/state/: mod.rs  persona_form_model.rs  persona_form_state.rs  validators.rs
